[package]
name = "fund-forge"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Monaghan"]
[workspace]
members = [
    "ff_standard_lib",
    "ff_strategies",
    "ff_data_server",
    "ff_data_server",
    "test_strategy",
    "ff_strategy_registry",
    "test_data_parser",
    "ff_gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3

[dependencies]
ff_standard_lib = { path = "ff_standard_lib" }
ff_gui = { path = "ff_gui" }
ff_strategies = { path = "ff_strategies" }
ff_data_server = { path = "ff_data_server"}
test_strategy = { path = "test_strategy" }
ff_strategy_registry = {path = "ff_strategy_registry"}
tokio = "*"
chrono = "*"
chrono-tz = "*"
iced = { version = "*"}
iced_futures = { version = "*" }
