[package]
name = "ff_data_server"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Monaghan"]
license-file = "LICENCE.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.30"
chrono-tz ="*"
ff_standard_lib = { path = "../ff_standard_lib"}
chrono = "*"
tokio = { version = "*", features = ["full"] }
futures = "*"
rustls = "0.23.5"
rustls-pemfile = "*"
tokio-rustls = "0.26.0"
serde = { version = "1.0.197", features = ["derive"] }
env_logger = "0.11.3"
webpki-roots = "0.26.1"
rustls-native-certs = "*"
structopt = "*"
ahash = "*"
dashmap = "*"
prost = "0.13.3"
tungstenite = "0.23.0"
tokio-tungstenite = { version = "0.23.1", features = ["stream", "native-tls"] }
hmac = "0.12.1"
sha2 = "0.10.8"
base64 = "0.22.1"
async-std = "1.13.0"
rust_decimal_macros ="*"
rust_decimal = { version = "1.36.0", features = ["maths"] }
async-trait = "0.1.83"
lazy_static = "1.5.0"
once_cell = "1.20.1"
serde_json = "1.0.128"
serde_derive = "1.0.210"
toml = "0.8.19"
indicatif = "*"
parking_lot = "0.12.3"
rkyv = { version =  "0.7.6", features = ["std", "alloc", "validation"] }
thiserror = "*"
strum_macros = "*"
uuid = { version = "1.10.0", features = ["v4"] }
reqwest = "0.12.9"
urlencoding = "*"
bytes = "1.8.0"
memmap2 = "0.9.5"