[package]
name = "ff_standard_lib"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Monaghan"]

[build-dependencies]
prost-build = "*"

[dependencies]
ff_rithmic_api = {path = "/Users/kevmonaghan/RustroverProjects/ff_rithmic_api"}
chrono = "*"
serde = { version = "*", features = ["derive"] }
rkyv = { version =  "*", features = ["std", "alloc", "validation"] }
bytes = "*"
zip = "*"
log = "*"
serde_json = "*"
tokio =  { version = "*", features = ["full"] }
once_cell = "*"
lazy_static = "*"
structopt = "*"
indicatif = "*"
strum_macros = "*"
strum ="*"
reqwest = { version = "*", features = ["stream"] }
urlencoding = "*"
toml = "*"
chrono-tz = "*"
serde_derive = "*"
env_logger = "*"
futures = "*"
rustls = "*"
tokio-rustls = "*"
rust_decimal = { version = "*", features = ["rkyv", "rkyv-safe"] }
float-cmp = "*"
rustls-pemfile = "*"
async-std = "*"
async-trait = "0.1.80"
heck = "*"
ahash = "*"
dashmap = "*"
csv ="*"
rust_decimal_macros ="*"
prost = "*"
tungstenite = "0.23.0"
