[package]
name = "ff_standard_lib"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Monaghan"]

[features]
server = []

[dependencies]
ff_rithmic_api = "0.1.6"
chrono = "*"
serde = { version = "*", features = ["derive"] }
rkyv = { version =  "0.7.6", features = ["std", "alloc", "validation"] }
bytes = "*"
zip = "*"
log = "*"
serde_json = "*"
tokio =  { version = "*", features = ["full"] }
once_cell = "*"
lazy_static = "*"
structopt = "*"
indicatif = "*"
strum_macros = "0.26.4"
strum ="*"
reqwest = { version = "*", features = ["stream"] }
urlencoding = "*"
toml = "*"
chrono-tz = { version = "0.10.0", features = ["default", "std"] }
serde_derive = "*"
env_logger = "*"
futures = "*"
rustls = "0.23.5"
tokio-rustls = "*"
rust_decimal = { version = "*", features = ["rkyv", "rkyv-safe"] }
float-cmp = "*"
rustls-pemfile = "*"
async-std = "*"
async-trait = "0.1.80"
heck = "*"
ahash = "*"
dashmap = "6.1.0"
csv ="*"
rust_decimal_macros ="*"
prost = "0.13.3"
tungstenite = "0.23.0"
tokio-tungstenite = { version = "0.23.1", features = ["stream", "native-tls"] }
rayon = "1.10.0"