[package]
name = "ff_strategies"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Monaghan"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff_standard_lib = { path = "../ff_standard_lib"}
chrono = "*"
tokio = { version = "*", features = ["full", "macros"] }
bytes = "*"
rkyv = "*"
serde = { version = "*", features = ["derive"] }
lazy_static = "*"
futures = "*"
once_cell = "*"
chrono-tz = "*"
iso_currency = "*"
strum_macros = "*"
ahash = "*"
dashmap = "*"
