[package]
name = "ff_strategy_registry"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Monaghan"]
license-file = "LICENCE.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff_standard_lib = { path = "../ff_standard_lib" }
chrono = "*"
tokio = { version = "*", features = ["full"] }
futures = "*"
rustls = "0.23.5"
rustls-pemfile = "*"
tokio-rustls = "0.26.0"
serde = { version = "1.0.197", features = ["derive"] }
env_logger = "0.11.3"
webpki-roots = "0.26.1"
rustls-native-certs = "*"
structopt = "*"
once_cell = "*"
rkyv_derive = "0.7.45"