[package]
name = "test_strategy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono-tz = "*"
tokio = "1.36.0"
chrono = "*"
rkyv = "*"
rust_decimal = { version = "1.36.0", features = ["rkyv", "rkyv-safe"] }
rust_decimal_macros ="1.36.0"
ff_standard_lib = { path = "../ff_standard_lib" }
ff_strategies = { path = "../ff_strategies" }