[package]
name = "test_strategy"
version = "0.1.0"
edition = "2021"
license-file = "LICENCE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono-tz = "0.10.0"
tokio = "1.36.0"
chrono = "*"
rkyv = { version =  "0.7.6", features = ["std", "alloc", "validation"] }
rust_decimal = { version = "1.36.0", features = ["rkyv", "rkyv-safe"] }
rust_decimal_macros ="1.36.0"
ff_standard_lib = { path = "../../ff_standard_lib" }
colored = "*"
